Add facebook_url and tiktok_username options

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,10 @@ your_name                                 : # Emil Baehr
 your_link                                 : # https://emilbaehr.com
 your_city                                 : # Copenhagen
 email_address                             : # emil.baehr@gmail.com
-facebook_username                         :                                           
+facebook_username                         :
+facebook_url                              : https://www.facebook.com/profile.php?id=61552682534170
 instagram_username                        : nonutnovemberapp
+tiktok_username                           : nonutnovemberapp
 twitter_username                          : # ebaehr
 github_username                           : # emilbaehr
 youtube_username                          :
