--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,24 @@ mastodon_link                             : # https://mastodon.social/@ebaehr
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
+  - title                                 : Log what days you bust on
+    description                           :
+    fontawesome_icon_name                 : star
+  - title                                 : Add your friends
+    description                           :
+    fontawesome_icon_name                 : star
+  - title                                 : See what days your friends bust on
+    description                           :
+    fontawesome_icon_name                 : star
+  - title                                 : Get notified when your friends bust
+    description                           :
+    fontawesome_icon_name                 : star
+  - title                                 : Beat your friends at NNN
+    description                           :
+    fontawesome_icon_name                 : star
+  - title                                 : Only able to use app during November
+    description                           :
+    fontawesome_icon_name                 : star
 #  - title                                 : GitHub Pages Jekyll Theme
 #    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
 #    fontawesome_icon_name                 : magic
