--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ features                                  :
   - title                                 : See when your friends bust
     description                           :
     fontawesome_icon_name                 : star
-  - title                                 : Get notified when your friends bust
+  - title                                 : Notify friends when you bust
     description                           :
     fontawesome_icon_name                 : star
   - title                                 : Beat your friends at NNN
