--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ your_name                                 : # Emil Baehr
 your_link                                 : # https://emilbaehr.com
 your_city                                 : # Copenhagen
 email_address                             : # emil.baehr@gmail.com
-facebook_username                         :
+facebook_username                         : # nonutnovemberapp
 facebook_url                              : https://www.facebook.com/profile.php?id=61552682534170
 instagram_username                        : nonutnovemberapp
 tiktok_username                           : nonutnovemberapp
