--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ app_price                                 :                                     
 app_description                           : Become the best version of yourself.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
-
+include_header                            : false
 
 
 # Information About Yourself
